// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles/MaxHeight handles % value 1`] = `
{
  "classNames": [
    "literal",
  ],
  "variables": {
    "--uic-max-h-s": "50%",
  },
}
`;

exports[`Styles/MaxHeight handles px value 1`] = `
{
  "classNames": [
    "literal",
  ],
  "variables": {
    "--uic-max-h-s": "50px",
  },
}
`;

exports[`Styles/MaxHeight handles responsive value 1`] = `
{
  "classNames": [
    "literal",
    "literal--l",
  ],
  "variables": {
    "--uic-max-h-l": "50%",
    "--uic-max-h-s": "50px",
  },
}
`;

exports[`Styles/MaxHeight handles undefined value 1`] = `null`;

exports[`Styles/MaxHeight handles unit value 1`] = `
{
  "classNames": [
    "unit",
  ],
  "variables": {
    "--uic-max-h-s": 5,
  },
}
`;
